Size style adjustment in switcherTheme to avoid a jump in menu items when switching themes.

--- a/src/components/Theme.css
+++ b/src/components/Theme.css
@@ -2,6 +2,7 @@
     position: relative;
     display: inline-block;
     margin: 0.5rem;
+    min-width: 45px;
 }
 
 .switcher-input {
